<resources>
    <string name="app_name">RideOn</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started_text">Find the best carpooling options for your daily commute</string>
    <string name="get_started_button">Get Started</string>
    <string name="app_banner">App Banner</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="your_1_carpooling_app">Your #1 Carpooling App</string>
    <string name="email">Email</string>
    <string name="email_hint">enter your email…</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter your password…</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member">Already a member?</string>
    <string name="find_yourself_a_drive">Find yourself a drive</string>
    <string name="available_drive_image_icon">Available drive Image icon</string>
    <string name="arrow">arrow</string>
    <string name="book_now">Book Now</string>
    <string name="ride_type">ride type</string>
    <string name="account">account</string>
    <string name="choose_ride_icon_button">choose ride icon button</string>
    <string name="our_available_rides">Our available rides</string>


    <string name="not_found">not found</string>
    <string name="user_shared_pref">user_prefs</string>
    <string name="user_uid">user_uid</string>
    <string name="user_email">user_email</string>
    <string name="user_display_name">user_display_name</string>
    <string name="welcome">Welcome</string>
    <string name="your_new_balance_will_be">Your new balance will be:</string>
    <string name="egp">EGP</string>
    <string name="rides">Rides</string>
    <string name="my_orders">My Orders</string>
    <string name="currently_active">Currently Active</string>
    <string name="track">Track</string>
    <string name="cancel">Cancel</string>
    <string name="past_orders">Past Orders</string>
    <string name="details">Details</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="email_lowercase">email</string>
    <string name="password_lowercase">password</string>
    <string name="name_lowercase">name</string>

    <string-array name="ride_types_names">
        <item>Bikes</item>
        <item>Cars</item>
        <item>Vans</item>
        <item>Busses</item>
    </string-array>

    <string name="required_field">this field is required</string>
    <string name="create_user_error">User can\'t be created with that email</string>
    <string name="email_domain">\@eng.asu.edu.eg</string>
    <string name="email_domain_error">Email must end with :</string>
    <string name="password_length_error">Password should be at least 6 characters</string>
    <string name="not_a_passenger">This account belongs to a driver</string>
    <string name="not_a_driver">This account belongs to a passenger</string>
    <string name="log_tag">myapp101</string>
    <string name="login_data_error">Wrong credentials</string>
    <string name="intent_uid">uid</string>
    <string name="intent_email">email</string>
    <string name="intent_name">name</string>
    <string name="intent_wallet_balance">wallet_balance</string>
    <string name="offline_message">You\'re Offline</string>
    <string name="price">price</string>
    <string name="price_text_view">Price:</string>

</resources>