<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passenger_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rideon.view.passenger.FragmentPassengerHome"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_available_rides"
        android:name="com.example.rideon.view.passenger.FragmentAvailableRoutes"
        android:label="@string/rides"
        tools:layout="@layout/fragment_available_routes"/>

    <fragment
        android:id="@+id/navigation_order_history"
        android:name="com.example.rideon.view.passenger.FragmentOrderHistory"
        android:label="@string/orders"
        tools:layout="@layout/fragment_order_history"/>

    <fragment
        android:id="@+id/navigation_p_profile"
        android:name="com.example.rideon.view.passenger.FragmentPProfile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_p_profile">
        <action
            android:id="@+id/navigate_profile_to_profile_settings"
            app:destination="@id/navigation_profile_settings"
            app:restoreState="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_settings"
        android:name="com.example.rideon.view.passenger.FragmentPProfileSettings"
        android:label="Profile Settings"
        tools:layout="@layout/fragment_p_profile_settings"/>

</navigation>