<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rideon.view.passenger.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_available_rides"
        android:name="com.example.rideon.view.passenger.AvailableRoutesFragment"
        android:label="@string/rides"
        tools:layout="@layout/fragment_available_routes"/>

    <fragment
        android:id="@+id/navigation_order_history"
        android:name="com.example.rideon.view.passenger.OrderHistoryFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_order_history"/>

</navigation>