<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.home.fragments.Home"
    android:orientation="vertical"
    android:gravity="center"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/app_banner"
        android:src="@drawable/app_banner"
        tools:ignore="ImageContrastCheck" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-23dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:textSize="34sp"
        android:text="@string/lets_get_started"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:textSize="17sp"
        android:text="@string/get_started_text"/>
    <Button
        android:id="@+id/button_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="23dp"
        android:textSize="23sp"
        android:text="@string/get_started_button"
        style="@style/button_no_uppercase"/>
</androidx.appcompat.widget.LinearLayoutCompat>