<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:progress="@integer/google_play_services_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/login_layout"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Space
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:contentDescription="@string/app_banner"
                android:src="@drawable/app_banner"
                tools:ignore="ImageContrastCheck" />

            <RadioGroup
                android:id="@+id/radio_group_user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/radio_passenger"
                    android:layout_margin="20dp"
                    android:text="@string/passenger"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/radio_driver"
                    android:layout_margin="20dp"
                    android:text="@string/driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/ThemeOverlay.AppCompat.Dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_lowercase"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textSize="24sp"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/ThemeOverlay.AppCompat.Dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_lowercase"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textSize="24sp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <Space
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="24sp"
                    android:layout_weight="1"
                    style="@style/button_no_uppercase" />
                <Space
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/not_a_member"/>

                <Button
                    android:id="@+id/button_signup"
                    style="@style/button_no_uppercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/sign_up"
                    android:textColor="@color/secondary"
                    android:textSize="18sp"
                    tools:ignore="PrivateResource,TextContrastCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/button_bypass_passenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Bypass as Passenger"/>

            <Button
                android:id="@+id/button_bypass_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bypass as Driver"/>
            <Space
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>